[gd_scene load_steps=12 format=2]

[ext_resource path="res://Assets/themes/Pink.tres" type="Theme" id=1]
[ext_resource path="res://UI_Components/Plan.gd" type="Script" id=2]
[ext_resource path="res://Assets/png/wrench.png" type="Texture" id=3]
[ext_resource path="res://Assets/png/menu.png" type="Texture" id=4]
[ext_resource path="res://Assets/png/plus.png" type="Texture" id=5]
[ext_resource path="res://Assets/fonts/Crushed-Regular.ttf" type="DynamicFontData" id=6]

[sub_resource type="DynamicFont" id=4]
size = 35
font_data = ExtResource( 6 )

[sub_resource type="StyleBoxEmpty" id=1]

[sub_resource type="StyleBoxFlat" id=2]
content_margin_left = 12.0
content_margin_right = 12.0
bg_color = Color( 0.921569, 0.643137, 1, 1 )
border_width_left = 4
border_width_top = 3
border_width_right = 4
border_width_bottom = 5
border_color = Color( 0.784314, 0.0823529, 0.709804, 0.329412 )
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="StyleBoxEmpty" id=3]

[sub_resource type="Animation" id=5]
resource_name = "options"
length = 0.6
tracks/0/type = "value"
tracks/0/path = NodePath("Panel:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 0.6 ),
"transitions": PoolRealArray( 0.277392, 1, 1 ),
"update": 0,
"values": [ Vector2( -400, 0 ), Vector2( -9, 0 ), Vector2( -9, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Panel/options2:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 0.34151, 1 ),
"update": 0,
"values": [ Color( 0.784314, 0.0823529, 0.709804, 0 ), Color( 0.784314, 0.0823529, 0.709804, 0 ), Color( 0.784314, 0.0823529, 0.709804, 1 ) ]
}

[node name="Plan" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )
script = ExtResource( 2 )

[node name="MainCont" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="infobar" type="HBoxContainer" parent="MainCont"]
margin_right = 1440.0
margin_bottom = 100.0

[node name="options" type="ToolButton" parent="MainCont/infobar"]
margin_right = 100.0
margin_bottom = 100.0
icon = ExtResource( 3 )

[node name="name" type="Label" parent="MainCont/infobar"]
margin_left = 104.0
margin_top = 31.0
margin_right = 1341.0
margin_bottom = 68.0
size_flags_horizontal = 3
size_flags_vertical = 6
text = "untitled"
align = 1

[node name="menu" type="ToolButton" parent="MainCont/infobar"]
margin_left = 1345.0
margin_right = 1440.0
margin_bottom = 100.0
rect_min_size = Vector2( 95, 0 )
icon = ExtResource( 4 )

[node name="Main" type="Control" parent="MainCont"]
margin_top = 104.0
margin_right = 1440.0
margin_bottom = 816.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="scroll" type="ScrollContainer" parent="MainCont/Main"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -650.0
margin_top = -325.0
margin_right = 650.0
margin_bottom = 325.0
rect_min_size = Vector2( 1300, 650 )
scroll_horizontal_enabled = false

[node name="planlines" type="VBoxContainer" parent="MainCont/Main/scroll"]
margin_right = 1300.0
margin_bottom = 650.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="plus" type="ToolButton" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -100.0
margin_right = 100.0
icon = ExtResource( 5 )

[node name="Panel" type="Panel" parent="."]
anchor_bottom = 1.0
margin_left = -400.0
margin_right = -21.0

[node name="options2" type="ToolButton" parent="Panel"]
modulate = Color( 0.784314, 0.0823529, 0.709804, 0 )
margin_right = 100.0
margin_bottom = 100.0
icon = ExtResource( 3 )

[node name="Label" type="Label" parent="Panel"]
anchor_right = 1.0
margin_top = 30.0
margin_bottom = 71.0
custom_fonts/font = SubResource( 4 )
text = "PLAN_OPTIONS"
align = 1

[node name="cont" type="VBoxContainer" parent="Panel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -150.0
margin_top = -343.0
margin_right = 150.0
margin_bottom = 343.0

[node name="sep3" type="HSeparator" parent="Panel/cont"]
margin_right = 300.0
margin_bottom = 29.0
custom_styles/separator = SubResource( 1 )
custom_constants/separation = 29

[node name="name" type="LineEdit" parent="Panel/cont"]
margin_top = 33.0
margin_right = 300.0
margin_bottom = 66.0
custom_styles/normal = SubResource( 2 )
placeholder_text = "PLAN_NAME"
caret_blink = true

[node name="sep1" type="HSeparator" parent="Panel/cont"]
margin_top = 70.0
margin_right = 300.0
margin_bottom = 74.0
custom_styles/separator = SubResource( 1 )

[node name="desc" type="LineEdit" parent="Panel/cont"]
margin_top = 78.0
margin_right = 300.0
margin_bottom = 111.0
custom_styles/normal = SubResource( 2 )
placeholder_text = "PLAN_DESC"
caret_blink = true

[node name="sep2" type="HSeparator" parent="Panel/cont"]
margin_top = 115.0
margin_right = 300.0
margin_bottom = 119.0
custom_styles/separator = SubResource( 1 )

[node name="notes" type="TextEdit" parent="Panel/cont"]
margin_top = 123.0
margin_right = 300.0
margin_bottom = 673.0
rect_min_size = Vector2( 285, 550 )
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/focus = SubResource( 3 )
custom_styles/normal = SubResource( 2 )
caret_blink = true

[node name="sep4" type="HSeparator" parent="Panel/cont"]
margin_top = 677.0
margin_right = 300.0
margin_bottom = 687.0
custom_styles/separator = SubResource( 1 )
custom_constants/separation = 10

[node name="save" type="Button" parent="Panel/cont"]
margin_top = 691.0
margin_right = 300.0
margin_bottom = 720.0
text = "SAVE"

[node name="anim" type="AnimationPlayer" parent="."]
anims/options = SubResource( 5 )
[connection signal="pressed" from="MainCont/infobar/options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="MainCont/infobar/menu" to="." method="_on_menu_pressed"]
[connection signal="pressed" from="plus" to="." method="_on_plus_pressed"]
[connection signal="pressed" from="Panel/options2" to="." method="_on_options2_pressed"]
[connection signal="pressed" from="Panel/cont/save" to="." method="_on_save_pressed"]
